fix: 파일 처리 자원 해제 누락 수정
  - DataRepository에 close 메서드 추가
  - 파일 파서 EOF 및 예외 발생 시 자원 해제 처리
  - ThreadPoolFramework 종료 시 repository 자원 정리
  - ping 실행 로직을 ProcessBuilder 기반으로 개선